--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "deploy": "node scripts/gh-pages-deploy.js"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "vue": "^2.6.11",
+    "vue-cryptojs": "^2.1.5",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
