--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "node-sass": "^5.0.0",
     "vue": "^2.6.11",
     "vue-cryptojs": "^2.1.5",
     "vue-router": "^3.2.0"
@@ -34,7 +35,7 @@
     "portal-vue": "^2.1.7",
     "prettier": "^1.19.1",
     "sass": "^1.26.11",
-    "sass-loader": "^10.0.2",
+    "sass-loader": "^10.1.1",
     "vue-cli-plugin-bootstrap-vue": "^0.7.0",
     "vue-template-compiler": "^2.6.11"
   },
