--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^5.0.0",
     "vue": "^2.6.11",
     "vue-cryptojs": "^2.1.5",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
